erpkeys-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpkeys-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: erpkeys-api
  template:
    metadata:
      labels:
        app: erpkeys-api
    spec:
      containers:
        - name: erpkeys-api
          image: anujpaul/erpkeysapi:release
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "2000Mi"
              cpu: "1000m"
            requests:
              memory: "1500Mi"
              cpu: "500m"
