erpkeys-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erpkeys-api-service
spec:
   type: ClusterIP
   selector:
     app: erpkeys-api
   ports:
     - port: 8080
       targetPort: 8080
