erpkeys-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpkeys-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: erpkeys.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erpkeys-api-service
                port:
                  number: 8080
